# Engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  generate.ps1  imgui.ini
Resources/: content.txt
Resources/objects/character/: character.glb
Resources/objects/cyborg/: LICENSE.txt  cyborg.mtl
Resources/objects/paint/: tree.glb
Resources/objects/planet/: planet.mtl  source.txt
Resources/objects/rock/: rock.mtl
Resources/objects/train/: building_1.glb  locomotive.glb  locomotive_no_wheels.glb  track_forward.glb  track_left.glb  track_right.glb  wagon.glb  wagon_no_wheels.glb
Source/Application/: main.cpp
Source/Application/App/: Controller.cpp  Controller.hpp  Game.cpp  Game.hpp  View.cpp  View.hpp  ViewShadow.cpp  ViewShadow.hpp  ViewTest.cpp  ViewTest.hpp  View_full.cpp  View_full.hpp
Source/Application/App/Components/: Component.hpp  TrainController.cpp  TrainController.h
Source/Application/App/Models/: ObjectModel.cpp  ObjectModel.hpp
Source/Application/App/Objects/: GameModel.hpp  GameObject.hpp
Source/Application/Game/: ApplicationManager.cpp  ApplicationManager.hpp
Source/Application/Game/Commanders/: AppCommander.cpp  AppCommander.hpp  FireCommander.cpp  FireCommander.hpp
Source/Application/Game/Scenes/: AppScene.cpp  AppScene.hpp  BloomScene.cpp  BloomScene.hpp  FireScene.cpp  FireScene.hpp  LearnScene.cpp  LearnScene.hpp
Source/Application/TrainGame/: TrainGameModels.cpp  TrainGameModels.hpp
Source/Engine/Events/: Common.hpp  CommonEvents.cpp  CommonEvents.hpp  Events.cpp  Events.hpp
Source/Engine/Framework/Component/: BatchComponent.hpp  BodyComponent.hpp  CanvasComponent.hpp  CastComponent.hpp  CollideComponent.hpp  DrawComponent.hpp  FilterComponent.hpp  Material.cpp  Material.hpp  ParticleComponent.hpp  Pose.hpp  RenderComponent.hpp  Transform.hpp
Source/Engine/Framework/Core/: ComponentArray.hpp  ComponentManager.hpp  ECS.cpp  ECS.hpp  ECSTypes.hpp  EntityManager.cpp  EntityManager.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
Source/Engine/Framework/ECS/: ComponentManager.cpp  EntityManager.cpp  System.hpp
Source/Engine/Framework/Helper/: ManagedEntity.cpp  ManagedEntity.hpp
Source/Engine/Framework/System/: CanvasSystem.cpp  CanvasSystem.hpp  CasterSystem.cpp  CasterSystem.hpp  ColliderSystem.cpp  ColliderSystem.hpp  FilterSystem.cpp  FilterSystem.hpp  OverlaySystem.cpp  OverlaySystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShadowRender.hpp
Source/Engine/Graphic/: Camera.cpp  Camera.hpp  Cookable.cpp  Cookable.hpp  ShaderManager.cpp  ShaderManager.hpp  TextEngine.cpp  TextEngine.hpp  Window.cpp  Window.hpp
Source/Engine/Graphic/Base/: BaseCommander.cpp  BaseCommander.hpp  BaseScene.cpp  BaseScene.hpp  BaseShape.cpp  BaseShape.hpp  Cookable.cpp  Cookable.hpp  Scene.cpp  Scene.hpp  SceneEvents.hpp  SceneFrame.cpp  SceneFrame.hpp
Source/Engine/Graphic/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjectModel.hpp  Skybox.cpp  Skybox.hpp
Source/Engine/Graphic/Shaders/: Shader.cpp  Shader.hpp  ShaderGeometry.hpp  ShaderParticle.hpp  ShaderShadow.hpp  ShaderShape.hpp  ShaderSkybox.hpp  ShaderSolid.hpp  ShaderSource.cpp  ShaderSource.hpp  ShaderSurface.hpp  ShaderText.hpp  _ShaderHelper.cpp  _ShaderHelper.hpp
Source/Engine/Graphic/Utils/: Array.cpp  Array.hpp  Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Shader.cpp  Shader.hpp  ShaderSource.cpp  ShaderSource.hpp  StorageBuffer.hpp  Texture.cpp  Texture.hpp
Source/Engine/Graphic/Wrapper/: Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Source/Engine/IO/: function.cpp  function.hpp
Source/Engine/Physx/: BaseBody.hpp  Physx.cpp
Source/Engine/Utils/: Caster.hpp  Collider.cpp  Collider.hpp  RayCaster.cpp  RayCaster.hpp  Service.hpp
Source/Engine/Utils/Filter/: BaseFilter.cpp  BaseFilter.hpp  CopyFilter.cpp  CopyFilter.hpp
Source/Engine/Utils/Objects/: AnimatedText.cpp  AnimatedText.hpp  ShadowRender.cpp  ShadowRender.hpp
Source/Engine/Utils/Physic/: Collider.cpp  Collider.hpp  RayCaster.cpp  RayCaster.hpp
Source/Sample/: App.cpp  App.hpp  AppMenu.cpp  AppMenu.hpp  Menu.cpp  Menu.hpp  main.cpp
Source/Sample/App/: App.cpp  App.hpp  Controller.cpp  Controller.hpp  Sample.hpp  Ui.cpp  Ui.hpp  View.cpp  View.hpp  ViewForest.cpp  ViewForest.hpp
Source/Sample/App/SampleCube/: SampleCube.hpp  ViewCube.cpp  ViewCube.hpp
Source/Sample/App/SampleForest/: SampleForest.cpp  SampleForest.hpp  ViewForest.cpp  ViewForest.hpp
Source/Sample/App/SampleParticles/: SampleParticles.cpp  SampleParticles.hpp
Source/Sample/App/SampleTrain/: HelperTrain.hpp  SampleTrain.hpp  UiTrain.cpp
Source/Sample/Menu/: Menu.cpp
Source/Sample/Samples/: ManagedEntity.hpp  Sample.hpp
Source/Sample/Samples/SampleBreaker/: SampleBreaker.cpp  SampleBreaker.hpp  UiBreaker.cpp  UiBreaker.hpp
Source/Sample/Samples/SampleCanvas/: SampleCanvas.cpp  SampleCanvas.hpp
Source/Sample/Samples/SampleCube/: SampleCube.cpp  SampleCube.hpp  UiCube.cpp  UiCube.hpp  ViewCube.cpp  ViewCube.hpp
Source/Sample/Samples/SampleForest/: SampleForest.cpp  SampleForest.hpp  ViewForest.cpp  ViewForest.hpp
Source/Sample/Samples/SampleMandala/: SampleMandala.cpp  SampleMandala.hpp
Source/Sample/_imgui/: imgui.h  imstb_truetype.h
Source/Tools/: App.cpp  App.hpp  Menu.cpp  Menu.hpp  main.cpp
Source/Tools/App/: App.cpp  App.hpp  Menu.cpp  Menu.hpp
Source/Tools/Editors/: Editor.hpp
Source/Tools/Gui/: Menu.cpp  Menu.hpp
Source/Tools/MaterialEditor/: MaterialEditor.cpp  MaterialEditor.h  MaterialEditorMenu.cpp  MaterialEditorMenu.hpp
Source/Tools/ModelEditor/: ModelEditor.cpp  ModelEditor.h  ModelEditorMenu.cpp  ModelEditorMenu.hpp
Source/Tools/WorldEditor/: WorldEditor.h  WorldEditorMenu.hpp
Source/TrainGame/: main.cpp
Source/TrainGame/App/: Controller.cpp  Controller.hpp  Game.cpp  Game.hpp  GameEvents.hpp  View.cpp  View.hpp
Source/TrainGame/TrainGame/: Grid.cpp  Grid.hpp  GridCell.hpp  TrainGameModels.cpp  TrainGameModels.hpp
(+205 files in other folders)
